Day1 solutions and tests